--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,19 +1,26 @@
 .btn {
-  height: 21px;
-  font-family: inherit;
-  background-color: white;
+  padding: 8px 16px;
+  border-radius: 2px;
+  background-color: #3f51b5;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  text-align: center;
+  display: inline-block;
+  color: #fff;
+  border: 0;
+  text-decoration: none;
   text-transform: uppercase;
-
-  border-radius: 15px;
-  border: 1px solid darkgray;
-  outline: none;
-  line-height: 1;
-  padding: 3px 8px;
-  transition: all 0.2s ease;
-  box-shadow: 0 2px darkgray;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 24px;
+  font-style: normal;
+  font-weight: 500;
+  max-width: 180px;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
-.btn:hover {
-  box-shadow: 0 1px darkgray;
-  transform: translateY(2px);
+.btn:hover,
+.btn:focus {
+  background-color: #303f9f;
 }
