--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,7 +1,7 @@
 .btn {
   padding: 8px 16px;
   border-radius: 2px;
-  background-color: #3f51b5;
+  background-color: #1b5299;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
@@ -22,5 +22,5 @@
 
 .btn:hover,
 .btn:focus {
-  background-color: #303f9f;
+  transform: scale(1.08);
 }
