--- a/src/components/Searchbar/Searchbar.module.css
+++ b/src/components/Searchbar/Searchbar.module.css
@@ -7,11 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 64px;
-  padding-right: 24px;
-  padding-left: 24px;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding: 6px 24px;
   color: #fff;
   background-color: #1b5299;
 
@@ -33,8 +29,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 48px;
-  height: 48px;
+  width: 40px;
+  height: 40px;
   border: 0;
   opacity: 0.5;
   background-color: white;
@@ -44,7 +40,7 @@
 }
 
 .test {
-  width: 25px;
+  width: 24px;
 }
 .button:hover {
   opacity: 1;
